--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 /* universal styles */
-* {
+body {
   margin: 0;
   padding: 0;
   font-family: 'Helvetica';
@@ -16,15 +16,15 @@ a {
 
 h2 {
   font-size: 36px;
-  padding-bottom: 20px;
 }
 
 /* header */
 header {
   display: flex;
+  background-color: black;
   align-items: center;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   height: 69px;
   border-bottom: 1px solid seashell;
@@ -46,34 +46,41 @@ nav span {
   padding: 20px 10px;
 }
 
+/* main */
+
+.main {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  top: 70px;
+  width: 1200px;
+  margin-top: 0px;
+  margin-right: auto;
+  margin-bottom: 200px;
+  margin-left: auto;
+}
+
 /* mission section */
 
 .mission {
   display: inline-flex;
-  flex-shrink: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-image: url('../images/img-mission-background.jpg');
   height: 700px;
-  max-width: 1200px;
-  position: relative;
-  top: 69px;
 }
 
 .mission .mission-statement {
   background-color: black;
   width: 1200px;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
-
 
 
 /* featured teas */
 
 .featured-tea {
-  margin: 75px;
+  margin: 0px 75px;
 }
 
 .featured-tea .featured-tea-intro {
@@ -99,32 +106,38 @@ nav span {
 /* locations section */
 
 .locations {
-  display: flex;
-  flex-direction: row;
-  flex-shrink: 1;
   background-image: url('../images/img-locations-background.jpg');
-  height: 500px;
-  max-width: 1200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 575px;
+  width: 1200px;
+  margin-top: 40px;
+}
+
+.boxes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 300px;
+
 }
 
 .location-block {
+  background-color: black;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   width: 300px;
   height: 300px;
   opacity: 1;
-  padding: 30px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .locations h2 {
   background-color: transparent;
-  padding-top: 70px;
-}
-
-.locations p {
-  padding-top: 30px;
+  padding-top: 40px;
 }
 
 /* footer */
@@ -144,5 +157,4 @@ footer .copyright h5 {
 
 h5 {
   font-size: 18px;
-  padding: 20px;
 }
